# Invisible-Hands

./: .gitignore  README.md  brain.py  device_controller.py  find_position.py  main.py  pyproject.toml  requirements.txt  test.py  test_actions.py
scripts/: test_actions.py  test_click.py
src/invisible_hands/: __init__.py  __main__.py  agent.py  cli.py  config.py
src/invisible_hands/clickers/: __init__.py  base.py  chain.py  native.py  ocr.py  vision.py
src/invisible_hands/controllers/: __init__.py  apps.py  input.py  screen.py
src/invisible_hands/llm/: __init__.py  client.py  executor.py  planner.py  verifier.py
src/invisible_hands/parsing/: __init__.py  actions.py  steps.py
src/invisible_hands/reporting/: __init__.py  reporter.py
src/invisible_hands/voice/: __init__.py  recorder.py
